# esp32-kopter

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  firmware.json  partitions.csv  sdkconfig.defaults
components/glm/: CMakeLists.txt
components/wifi/: CMakeLists.txt
components/wifi/include/: WiFiManager.hpp
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
main/include/: CoreTypes.hpp  LoopManager.hpp  Message.hpp  MessageManager.hpp  Task.hpp  WiFiManager.hpp  pch.hpp
main/include/core/communication/: CommunicationService.hpp  IMessageTransport.hpp  Message.hpp  MessageException.hpp
main/include/core/communication/esp_now/: EspNowTransport.hpp
main/include/core/event/: EventService.hpp
main/include/core/exception/: Exception.hpp  KopterException.hpp  KopterExceptionUtils.hpp
main/include/core/firmware/: FirmwareException.hpp  FirmwareService.hpp
main/include/core/network/: JSONParser.hpp  WiFiEvent.hpp  WiFiException.hpp  WiFiManager.hpp
main/include/core/peripheral/: Device.hpp  DeviceID.hpp  IDevice.hpp
main/include/core/peripheral/adc/: ADCDevice.hpp  ADCDeviceHolder.hpp  ADCException.hpp  ADCSample.hpp  AdcDevice.hpp  AdcDeviceHolder.hpp  AdcException.hpp  AdcMode.hpp  ContinuousReadStrategy.hpp  IADCReadStrategy.hpp  IAdcReadStrategy.hpp  OneShotReadStrategy.hpp
main/include/core/peripheral/i2c/: I2cDevice.hpp  I2cDeviceHolder.hpp  I2cException.hpp
main/include/core/utils/: ByteUtils.hpp  CRCUtils.hpp  KopterExceptionUtils.hpp  StringUtils.hpp
main/include/event/: WiFiEvents.hpp
main/include/fc/: FlightController.hpp  FlightMode.hpp
main/include/imu/: IMU.hpp
main/include/imu/filter/: ComplementaryFilter.hpp  IOrientationFilter.hpp
main/include/imu/mpu6050/: MPU6050.hpp  MPU6050Mapper.hpp
main/include/led/: LEDColor.hpp  LEDException.hpp  LEDService.hpp  RGBColor.hpp
main/include/manager/: LoopManager.hpp  MessageManager.hpp  WiFiManager.hpp
main/include/motor/: IMotor.hpp  Motor.hpp  MotorException.hpp  MotorFactory.hpp
main/include/motor/bdc/: BDCMotor.hpp
main/include/motor/mixer/: IMotorMixer.hpp  MotorMixerConfig.hpp  XMotorMixer.hpp
main/include/ota/: OTAException.hpp  OTAMeta.hpp  OTAService.hpp
main/include/peripheral/: DeviceAdcMode.hpp  DeviceID.hpp  PeripheralDevice.hpp  PeripheralDeviceFactory.hpp
main/include/pid/: PID.hpp  PIDException.hpp
main/include/sensor/barometer/: IBarometer.hpp  IBarometerValueMapper.hpp
main/include/sensor/barometer/bmp280/: BMP280.hpp  BMP280Calibration.hpp  BMP280Mapper.hpp
main/include/sensor/imu/: IIMUValueMapper.hpp  IMU.hpp  IMUData.hpp
main/include/sensor/imu/filter/: ComplementaryFilter.hpp  IOrientationFilter.hpp
main/include/sensor/imu/mpu6050/: MPU6050.hpp  MPU6050Mapper.hpp
main/src/: LoopManager.cpp  Message.cpp  MessageManager.cpp  Task.cpp  WiFiManager.cpp  main.cpp  pch.cpp
main/src/core/communication/: CommunicationService.cpp  MessageException.cpp
main/src/core/communication/esp_now/: EspNowTransport.cpp
main/src/core/event/: EventService.cpp
main/src/core/firmware/: FirmwareException.cpp  FirmwareService.cpp
main/src/core/network/: JSONParser.cpp  WiFiException.cpp  WiFiManager.cpp
main/src/core/peripheral/adc/: ADCDevice.cpp  ADCDeviceHolder.cpp  ADCException.cpp  ADCSample.cpp  AdcDevice.cpp  AdcDeviceHolder.cpp  AdcException.cpp  ContinuousReadStrategy.cpp  IAdcReadStrategy.cpp  OneShotReadStrategy.cpp
main/src/core/peripheral/i2c/: I2cDevice.cpp  I2cDeviceHolder.cpp  I2cException.cpp
main/src/core/utils/: CRCUtils.cpp
main/src/fc/: FlightController.cpp
main/src/imu/: IMU.cpp
main/src/imu/filter/: ComplementaryFilter.cpp
main/src/imu/mpu6050/: MPU6050.cpp  MPU6050Mapper.cpp
main/src/led/: LEDException.cpp  LEDService.cpp
main/src/manager/: LoopManager.cpp  MessageManager.cpp  WiFiManager.cpp
main/src/motor/: IMotor.cpp  Motor.cpp  MotorException.cpp  MotorFactory.cpp
main/src/motor/bdc/: BDCMotor.cpp
main/src/motor/mixer/: XMotorMixer.cpp
main/src/ota/: OTAException.cpp  OTAMeta.cpp  OTAService.cpp
main/src/peripheral/: PeripheralDevice.cpp  PeripheralDeviceFactory.cpp
main/src/pid/: PID.cpp  PIDException.cpp
main/src/sensor/barometer/: IBarometer.cpp
main/src/sensor/barometer/bmp280/: BMP280.cpp  BMP280Calibration.cpp  BMP280Mapper.cpp
main/src/sensor/imu/: IMU.cpp
main/src/sensor/imu/filter/: ComplementaryFilter.cpp
main/src/sensor/imu/mpu6050/: MPU6050.cpp  MPU6050Mapper.cpp
